SDKs/swig/Examples/test-suite/errors/cpp_inherit_ignored.i
version https://git-lfs.github.com/spec/v1
oid sha256:f9fbc99baec2b36e0cca73b52c257c1a5a272d633913f8fe3834616ea2b130b3
size 459
